--- a/notebook-1.ipynb
+++ b/notebook-1.ipynb
@@ -7322,7 +7322,19 @@
    "id": "4ab99aaa-345f-4d34-a874-615b73d6172c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def search(query):\n",
+    "    boost = {'question': 3.0, 'section': 0.5}\n",
+    "\n",
+    "    results = index.search(\n",
+    "        query=query,\n",
+    "        filter_dict={'course': 'data-engineering-zoomcamp'},\n",
+    "        boost_dict=boost,\n",
+    "        num_results=5\n",
+    "    )\n",
+    "\n",
+    "    return results"
+   ]
   },
   {
    "cell_type": "code",
@@ -7330,7 +7342,26 @@
    "id": "54f132a5-e986-4292-8404-e670ad44e08c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_prompt(query, search_results):\n",
+    "    prompt_template = \"\"\"\n",
+    "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+    "Use only the facts from the CONTEXT when answering the QUESTION.\n",
+    "\n",
+    "QUESTION: {question}\n",
+    "\n",
+    "CONTEXT: \n",
+    "{context}\n",
+    "\"\"\".strip()\n",
+    "\n",
+    "    context = \"\"\n",
+    "    \n",
+    "    for doc in search_results:\n",
+    "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
+    "    \n",
+    "    prompt = prompt_template.format(question=query, context=context).strip()\n",
+    "    return prompt"
+   ]
   },
   {
    "cell_type": "code",
@@ -7338,7 +7369,61 @@
    "id": "bdfe34cc-cd3f-46f4-a6a2-1cd82162a1b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def llm(prompt):\n",
+    "    response = client.chat.completions.create(\n",
+    "        model='gpt-4o',\n",
+    "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
+    "    )\n",
+    "    \n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12a52a71-6bed-4e1f-894f-489eabff1a60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = 'how do I run kafka?'\n",
+    "\n",
+    "def rag(query):\n",
+    "    search_results = search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ad0c46-a1b7-4770-b9ac-1493cf9dc7b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rag(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba288256-b279-4d52-88e3-f4c6458d4da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rag('the course has already started, can I still enroll?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28e03ebd-4751-46b9-9dae-500863300f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents[0]"
+   ]
   }
  ],
  "metadata": {
