--- a/notebook-1.ipynb
+++ b/notebook-1.ipynb
@@ -11311,17 +11311,517 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e33c591e-79da-4896-b72f-cc18600125ea",
+   "metadata": {},
+   "source": [
+    "## 3.8 Offline RAG Evaluation: LLM as a Judge"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e45c6c30-9cc5-460a-87ce-57f17505c114",
+   "execution_count": 115,
+   "id": "1c9cb652-a020-490e-80ae-82c7340d32f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prompt1_template = \"\"\"\n",
+    "You are an expert evaluator for a Retrieval-Augmented Generation (RAG) system.\n",
+    "Your task is to analyze the relevance of the generated answer compared to the original answer provided.\n",
+    "Based on the relevance and similarity of the generated answer to the original answer, you will classify\n",
+    "it as \"NON_RELEVANT\", \"PARTLY_RELEVANT\", or \"RELEVANT\".\n",
+    "\n",
+    "Here is the data for evaluation:\n",
+    "\n",
+    "Original Answer: {answer_orig}\n",
+    "Generated Question: {question}\n",
+    "Generated Answer: {answer_llm}\n",
+    "\n",
+    "Please analyze the content and context of the generated answer in relation to the original\n",
+    "answer and provide your evaluation in parsable JSON without using code blocks:\n",
+    "\n",
+    "{{\n",
+    "  \"Relevance\": \"NON_RELEVANT\" | \"PARTLY_RELEVANT\" | \"RELEVANT\",\n",
+    "  \"Explanation\": \"[Provide a brief explanation for your evaluation]\"\n",
+    "}}\n",
+    "\"\"\".strip()\n",
+    "\n",
+    "prompt2_template = \"\"\"\n",
+    "You are an expert evaluator for a Retrieval-Augmented Generation (RAG) system.\n",
+    "Your task is to analyze the relevance of the generated answer to the given question.\n",
+    "Based on the relevance of the generated answer, you will classify it\n",
+    "as \"NON_RELEVANT\", \"PARTLY_RELEVANT\", or \"RELEVANT\".\n",
+    "\n",
+    "Here is the data for evaluation:\n",
+    "\n",
+    "Question: {question}\n",
+    "Generated Answer: {answer_llm}\n",
+    "\n",
+    "Please analyze the content and context of the generated answer in relation to the question\n",
+    "and provide your evaluation in parsable JSON without using code blocks:\n",
+    "\n",
+    "{{\n",
+    "  \"Relevance\": \"NON_RELEVANT\" | \"PARTLY_RELEVANT\" | \"RELEVANT\",\n",
+    "  \"Explanation\": \"[Provide a brief explanation for your evaluation]\"\n",
+    "}}\n",
+    "\"\"\".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "6e2b6f49-9d30-4978-89ec-c3b014a6b80f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sample = df_gpt5nano.sample(n=100, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "9d836216-098b-4c47-9c8b-40032c74c568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = df_sample.to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "37ad557d-b66a-459b-90bc-99a13abbe7e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'answer_llm': 'It depends on whether the submission form is still open. \\n- If the form is still open, you can submit your homework and it will be evaluated. \\n- If the form is closed (which happens after the due date), it’s too late.\\n\\nNote: generally the form closes after the due date, and homework is not mandatory for finishing the course.',\n",
+       " 'answer_orig': 'No, it’s not possible. The form is closed after the due date. But don’t worry, homework is not mandatory for finishing the course.',\n",
+       " 'document': 'c839b764',\n",
+       " 'question': 'Can I send in my homework late?',\n",
+       " 'course': 'machine-learning-zoomcamp',\n",
+       " 'cosine': 0.736784040927887}"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record = samples[0]\n",
+    "record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "37b2b6b0-aeeb-4086-bebf-3d1f96a34feb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an expert evaluator for a Retrieval-Augmented Generation (RAG) system.\n",
+      "Your task is to analyze the relevance of the generated answer compared to the original answer provided.\n",
+      "Based on the relevance and similarity of the generated answer to the original answer, you will classify\n",
+      "it as \"NON_RELEVANT\", \"PARTLY_RELEVANT\", or \"RELEVANT\".\n",
+      "\n",
+      "Here is the data for evaluation:\n",
+      "\n",
+      "Original Answer: No, it’s not possible. The form is closed after the due date. But don’t worry, homework is not mandatory for finishing the course.\n",
+      "Generated Question: Can I send in my homework late?\n",
+      "Generated Answer: It depends on whether the submission form is still open. \n",
+      "- If the form is still open, you can submit your homework and it will be evaluated. \n",
+      "- If the form is closed (which happens after the due date), it’s too late.\n",
+      "\n",
+      "Note: generally the form closes after the due date, and homework is not mandatory for finishing the course.\n",
+      "\n",
+      "Please analyze the content and context of the generated answer in relation to the original\n",
+      "answer and provide your evaluation in parsable JSON without using code blocks:\n",
+      "\n",
+      "{\n",
+      "  \"Relevance\": \"NON_RELEVANT\" | \"PARTLY_RELEVANT\" | \"RELEVANT\",\n",
+      "  \"Explanation\": \"[Provide a brief explanation for your evaluation]\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = prompt1_template.format(**record)\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "52abbe3a-4bb1-494d-95b6-676f1649907c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = llm(prompt, model='gpt-5-nano')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "d878cae8-11d1-4722-a4a4-fbb1dad6184d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "99c31ad6-5d40-47d9-a8d2-71a53ab405b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████| 100/100 [13:01<00:00,  7.82s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluations = []\n",
+    "\n",
+    "for record in tqdm(samples):\n",
+    "    prompt = prompt1_template.format(**record)\n",
+    "    evaluation = llm(prompt, model='gpt-5-nano')\n",
+    "    evaluations.append(evaluation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "70636382-6b30-4224-97b9-ec16a662d339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_evaluations = []\n",
+    "\n",
+    "for i, str_eval in enumerate(evaluations):\n",
+    "    json_eval = json.loads(str_eval)\n",
+    "    json_evaluations.append(json_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "f603ec12-e639-4b7f-b465-41b83ae70919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_evaluations = pd.DataFrame(json_evaluations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "d5b5db3e-f2fb-4c7b-845a-6a799fe9bd4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Relevance\n",
+       "RELEVANT           86\n",
+       "PARTLY_RELEVANT    12\n",
+       "NON_RELEVANT        2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_evaluations.Relevance.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "ceeb9997-0a6b-4f5c-ac81-4c551e71661b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Relevance</th>\n",
+       "      <th>Explanation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>NON_RELEVANT</td>\n",
+       "      <td>The original answer describes a Zoomcamp FAQ w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>NON_RELEVANT</td>\n",
+       "      <td>The original answer discusses a Zoomcamp FAQ d...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Relevance                                        Explanation\n",
+       "58  NON_RELEVANT  The original answer describes a Zoomcamp FAQ w...\n",
+       "68  NON_RELEVANT  The original answer discusses a Zoomcamp FAQ d..."
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_evaluations[df_evaluations.Relevance == 'NON_RELEVANT'] #.to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "6e00522c-a34d-47f4-be2d-f19280baa6a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sample' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[132]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msample\u001b[49m[\u001b[32m4\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'sample' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sample[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "39b3146f-c768-40dc-818b-21fef8f4d07e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an expert evaluator for a Retrieval-Augmented Generation (RAG) system.\n",
+      "Your task is to analyze the relevance of the generated answer to the given question.\n",
+      "Based on the relevance of the generated answer, you will classify it\n",
+      "as \"NON_RELEVANT\", \"PARTLY_RELEVANT\", or \"RELEVANT\".\n",
+      "\n",
+      "Here is the data for evaluation:\n",
+      "\n",
+      "Question: How much time did students of the previous cohort spend weekly?\n",
+      "Generated Answer: Around 10 hours per week.\n",
+      "\n",
+      "Please analyze the content and context of the generated answer in relation to the question\n",
+      "and provide your evaluation in parsable JSON without using code blocks:\n",
+      "\n",
+      "{\n",
+      "  \"Relevance\": \"NON_RELEVANT\" | \"PARTLY_RELEVANT\" | \"RELEVANT\",\n",
+      "  \"Explanation\": \"[Provide a brief explanation for your evaluation]\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = prompt2_template.format(**record)\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "858f8708-c653-4c40-9cf9-f7f6f0619995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Relevance\": \"RELEVANT\",\n",
+      "  \"Explanation\": \"The user asked for weekly time spent by students of the previous cohort, and the answer provides a direct estimate of approximately 10 hours per week.\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation = llm(prompt, model='gpt-5-nano')\n",
+    "print(evaluation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "6551f420-6f14-476b-b4d1-10559b7655e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████| 100/100 [07:31<00:00,  4.51s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluations_2 = []\n",
+    "\n",
+    "for record in tqdm(samples):\n",
+    "    prompt = prompt2_template.format(**record)\n",
+    "    evaluation = llm(prompt, model='gpt-5-nano')\n",
+    "    evaluations_2.append(evaluation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "648e7e48-b842-491c-96df-eb91fdc56f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_evaluations_2 = []\n",
+    "\n",
+    "for i, str_eval in enumerate(evaluations_2):\n",
+    "    json_eval = json.loads(str_eval)\n",
+    "    json_evaluations_2.append(json_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "4726e937-d34c-4e88-8d35-ce3a81d3fe86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_evaluations_2 = pd.DataFrame(json_evaluations_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "a555ff5d-a9f8-4ac8-a415-228e2265c232",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Relevance</th>\n",
+       "      <th>Explanation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Relevance, Explanation]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_evaluations_2[df_evaluations_2.Relevance == 'NON_RELEVANT']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "8a9b9c90-c260-4d68-ac47-d4f5ad748275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Relevance\n",
+       "RELEVANT           90\n",
+       "PARTLY_RELEVANT    10\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_evaluations_2.Relevance.value_counts()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c9cb652-a020-490e-80ae-82c7340d32f1",
+   "id": "c00731fe-17ed-4aea-ac2e-c59c20ef4f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_evaluations_2[df_evaluations_2.Relevance == 'NON_RELEVANT']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d010631-deb5-44a0-ba43-3750ef9e8f25",
    "metadata": {},
    "outputs": [],
    "source": []
